sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value valeur
    setValeur(i,valeur)
                ^AlgBubbleSort1:6: error: not found: value valeur
    if (plusPetitQue(i+1,valeur)==true) {
                         ^