sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var taille=getNombreValeurs()
  for (i<-0 to taille-1) {
    setValeur(i,valeur)
    if (plusPetitQue(i+1,valeur)==true) {
      echange(i,i+1)
    }
  }
}